ховер в блоке клиенты
ховер на весь блок, включая логотипБ при наведении

--- a/css/colors.css
+++ b/css/colors.css
@@ -163,11 +163,14 @@ footer .developed {
 }
 
 .box-clietns > li>:hover {
-  fill: var(--accent-color);
+  color: var(--accent-color);
 }
 
-.box-clietns-icon:hover {
+/* .box-clietns-icon:hover {
   fill: var(--accent-color);
+} */
+.box-clietns-icon:hover {
+  fill: inherit;
 }
 
 /* .soc-links  
