--- a/css/styles.css
+++ b/css/styles.css
@@ -403,10 +403,6 @@ margin: -1;
   border-radius: 50%;
 }
 
-/* .displayed {
-  display: block;
-} */
-
 /* Наши клиенты +++++++ */
 .clients h2 {
   margin-top: 94px;
@@ -416,13 +412,17 @@ margin: -1;
   display: flex;
   margin-top: 50px;
 }
+
 .box-clietns > li {
   display: block;
+  border-radius: 4px;
   margin-right: 30px;
 }
-.box-clietns > li>:last-child {
+
+.box-clietns > li:last-child {
   margin-right: 0px;
 }
+
 .box-clietns > li > a {
   display: flex;
   width: 170px;
