--- a/css/colors.css
+++ b/css/colors.css
@@ -150,28 +150,34 @@ footer .developed {
 
 /* .clients 
  оформление блока с клиентами на главной старнице*/
+.box-clietns > li {
+  color: var(--icons-color);
+  border: 1px solid var(--icons-color);
+}
+
+.box-clietns > li:hover {
+  color: var(--accent-color);
+  border: 1px solid var(--accent-color);
+}
+
 .box-clietns > li > a {
+  color: var(--icons-color);
   border: 1px solid var(--icons-color);
 }
 
 .box-clietns > li > a:hover {
-  border: 1px solid  var(--accent-color);
+  color: var(--accent-color);
+  border: 1px solid var(--accent-color);
 }
 
 .box-clietns-icon {
-  fill: var(--icons-color);
+  fill: inherit;
 }
 
-.box-clietns > li>:hover {
-  color: var(--accent-color);
-}
-
-/* .box-clietns-icon:hover {
-  fill: var(--accent-color);
-} */
 .box-clietns-icon:hover {
   fill: inherit;
 }
+
 
 /* .soc-links  
  цвета иконок на социальные сети */
