--- a/css/colors.css
+++ b/css/colors.css
@@ -151,9 +151,16 @@ footer .developed {
 /* .clients 
  оформление блока с клиентами на главной старнице*/
 
+ .clients-item {
+  border: 1px solid var(--icons-color);
+  fill: var(--icons-color);
+}
 
-
-
+.clients-item:hover,
+.clients-item:focus {
+  fill var(--accent-color);
+  border: 1px solid var(--accent-color);
+}
 
 
 
