--- a/css/colors.css
+++ b/css/colors.css
@@ -151,7 +151,8 @@ footer .developed {
 /* .clients 
  оформление блока с клиентами на главной старнице*/
 
- .clients-item {
+ .clients-item,
+ .clients-link {
   border: 1px solid var(--icons-color);
   fill: var(--icons-color);
 }
@@ -161,11 +162,6 @@ footer .developed {
   fill var(--accent-color);
   border: 1px solid var(--accent-color);
 }
-
-
-
-
-
 
 /* .soc-links  
  цвета иконок на социальные сети */
