--- a/css/styles.css
+++ b/css/styles.css
@@ -47,6 +47,7 @@ h2 {
   margin-left: auto;
   margin-right: auto;
   padding: 0 15px;
+  /* outline: 1px solid gray; */
 }
 
 .is-hidden {
@@ -63,6 +64,10 @@ h2 {
 .header-nav .conteiner {
   display: flex;
   align-items: center;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 1.3;
+  letter-spacing: 0.02em;
 }
 
 .header-nav {
@@ -73,20 +78,27 @@ h2 {
   display: block;
 }
 
-.site-nav {
+.nav-list {
   display: flex;
   margin-left: 85px;
 }
 
-.site-nav > li {
-  margin-right: 50px;
+.nav-item:not(:last-child) {
+   margin-right: 50px;
 }
 
-.site-nav .activ {
+.nav-link {
+  display: block;
+  padding: 31px 0;
+}
+
+/* нижнее подчеркивание
+ в навигации */
+.nav-list .activ {
   position: relative;
 }
 
-.site-nav .activ::before {
+.nav-list .activ::before {
   content: '';
   position: absolute;
   display: block;
@@ -95,67 +107,47 @@ h2 {
   left: 0;
   bottom: 0;
   border-radius: 2px;
-} 
-
-.site-nav .item {
-  padding: 32px 0;
+  background-color: var(--accent-color);
 }
 
-.site-nav > li:last-child {
-  margin-right: 0px;
-}
-
-.site-nav .link {
-padding: 32px 0;
-}  /*  это для нижнего подчеркивания кнопок в навигации*/
-
-.contacts-links {
+/* контакты в навигации */
+.contacts-list {
+  display: flex;
   margin-left: auto;
-  display: flex;
 }
 
-.contacts-links > .item > .link {
+.contacts-item {
   display: flex;
+  align-items: baseline;
+}
+
+.contacts-item:not(:last-child) {
+  margin-right: 30px;
+}
+
+.icon-header {
+  display: inline-flex;
+  margin-right: 10px;
+  width: 20px;
+  height: 20px;
+  justify-content: center;
   align-items: center;
 }
 
-.contacts-links > li {
-  margin-right: 50px;
+.contacts-link {
+  display: flex;
+  align-items: center;
+  color: var(--head-and-subhead-color);
+  fill: var(--head-and-subhead-color);
 }
 
-.mail::before {
-  content: '';
-  display: inline-flex;
-  width: 16px;
-  height: 12px;
-  margin-right: 8px;
-  background-image: url(../images/envelope.svg);
-  background-size: contain;
-  background-position: bottom;
-  background-repeat: no-repeat;
+.contacts-link:hover {
+  color: var(--accent-color);
+  fill: var(--accent-color)
 }
 
-.phone::before {
-  content: '';  
-  display: inline-block;
-  width: 10px;
-  height: 15px;
-  margin-right: 8px;
-  background-image: url(../images/smartphone.svg);
-  background-size: contain;
-  background-position: top;
-  background-repeat: no-repeat;
 
-}
-
-.contacts-links > li:last-child {
-  margin-right: 15px;
-}
-
-.contacts-links a,
-.site-nav {
-  font-size: 14px;
-}
+/* == */
 
 .img-box-nav {
   display: inline-block;
