--- a/css/styles.css
+++ b/css/styles.css
@@ -146,6 +146,12 @@ h2 {
   fill: var(--accent-color)
 }
 
+.contacts-link:active,
+.contacts-link:focus {
+  color: var(--accent-color);
+  fill: var(--accent-color)
+}
+
 
 /* == */
 
@@ -356,31 +362,25 @@ h1 {
   margin-top: 10px;
 }
 
-.command-soc-link {
+.command-soc-list {
   display: flex;
   margin-top: 15px;
   margin-bottom: 24px;
   justify-content: center;
 }
 
-.command-soc-link > li {
+.command-soc-item {
   margin-right: 10px;
   justify-content: space-evenly;
 }
 
-.command-soc-link > li:last-child,
+.command-soc-item:last-child,
 .footer-cammon > ul > li:last-child {
   margin-right: 0;
 }
 
 .command-soc-icon {
   display: block;
-  width: 44px;
-  height: 44px;
-  border-radius: 50%;
-}
-
-.command-soc-icon:hover {
   width: 44px;
   height: 44px;
   border-radius: 50%;
@@ -440,37 +440,20 @@ footer {
   border-bottom: 1px solid rgba(255, 255, 255, 0.1);
 }
 
-.footer-left > .logo {
+.footer-address .logo {
 margin-bottom: 9px;
 } 
 
-.footer-cammon > ul {
+/* footer-cammon - footer-cammon-
+button-sprite */
+
+.footer-cammon-list {
   display: flex;
   margin-top: 21px;
 }
 
-.footer-cammon > ul > li {
+.footer-cammon-item {
   margin-right: 11px;
-}
-
-.soc-links::before {
-  content: '';
-  display: block;
-  width: 44px;
-  height: 44px;
-  border-radius: 100%;
-  background-repeat: no-repeat;
-  background-position: center;
-}
-
-.soc-links:hover:before  {
-  content: '';
-  display: block;
-  width: 44px;
-  height: 44px;
-  border-radius: 100%;
-  background-repeat: no-repeat;
-  background-position: center;
 }
 
 .mail-content,
@@ -483,14 +466,6 @@ margin-bottom: 9px;
 
 .mail-content {
   margin-bottom: 8px;
-}
-
-.subscribe > form {
-  display: flex;
-}
-
-.subscribe p {
-  margin-bottom: 21px;
 }
 
 .logo,
