--- a/css/styles.css
+++ b/css/styles.css
@@ -321,19 +321,19 @@ h1 {
   background-size: contain;
 }
 
-.command-box.employee-a::before {
+.employee-a::before {
   background-image: url('../images/comand/a.jpg');
 }
 
-.command-box.employee-b::before {
+.employee-b::before {
   background-image: url('../images/comand/b.jpg');
 }
 
-.command-box.employee-c::before {
+.employee-c::before {
   background-image: url('../images/comand/c.jpg');
 }
 
-.command-box.employee-d::before {
+.employee-d::before {
   background-image: url('../images/comand/d.jpg');
 }
 
@@ -378,13 +378,6 @@ h1 {
   margin-right: 0;
 }
 
-/* .command-soc-icon {
-  display: block;
-  width: 44px;
-  height: 44px;
-  border-radius: 50%;
-  попытка переделать под фокус и актив
-} */
 .command-soc-link {
   display: flex;
   justify-content: center;
@@ -432,13 +425,12 @@ h1 {
   margin-right: 30px;
 }
 
-.clients-link{
+.clients-link {
   display: flex;
   width: 170px;
   height: 90px;
   border: 1px solid var(--icons-color);
   fill: var(--icons-color);
-  /* background-color: lawngreen; */
   border-radius: 4px;
   justify-content: center;
   align-items: center;
@@ -447,7 +439,12 @@ h1 {
 .clients-link:hover{
   fill: var(--accent-color);
   border: 1px solid var(--accent-color);
-  /* background-color: var(--accent-color); */
+}
+
+.clients-link:active,
+.clients-link:focus {
+  fill: var(--accent-color);
+  border: 1px solid var(--accent-color);
 }
 
 .clients-icon{
