--- a/css/styles.css
+++ b/css/styles.css
@@ -203,9 +203,20 @@ h1 {
 
 /* Преимущества features------*/
 
-.features {
+.features .conteiner {
+  position: relative;
   padding: 94px 0;
-  border-bottom: 1px solid #ECECEC;
+}
+
+.features .conteiner::after {
+  content: '';
+  display: block;
+  position: absolute;
+  width: calc(100%);
+  height: 1px;
+  bottom: 0 ;
+  left: 0;
+  background-color: #ECECEC;
 }
 
 .features h3 {
@@ -456,7 +467,7 @@ footer {
   align-items: baseline;
   padding-top: 48px;
   padding-bottom: 18px;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+  /* border-bottom: 1px solid rgba(255, 255, 255, 0.1); */
 }
 
 .footer-address .logo {
@@ -486,15 +497,6 @@ button-sprite */
   border-radius: 50%;
   fill: #FFFFFF;
   background-color: rgba(255, 255, 255, 0.1);
-}
-
-.footer-cammon-link:hover {
-  background-color: var(--accent-color);
-}
-
-.footer-cammon-link:active,
-.footer-cammon-link:focus {
-  background-color: var(--accent-color);
 }
 
 /* footer buton send form ++++
@@ -590,4 +592,21 @@ input[type=text] {
   text-align: center;
   margin-top: 21px;
   padding-bottom: 21px;
+}
+
+.footer-conteiner .conteiner {
+  position: relative;
+}
+
+/* декоративная полоса разделяющая 
+в футере блок копирайта от верхней части */
+.footer-conteiner .conteiner::after {
+  content: '';
+  display: block;
+  position: absolute;
+  width: calc(100% - 30px);
+  height: 1px;
+  bottom: 0 ;
+  left: 15px;
+  background-color: rgba(255, 255, 255, 0.1);
 }
